fix: increase upload area min-height to prevent icon clipping
- Increase min-height from 140px to 200px in boxes.component.scss
- Increase min-height from 140px to 200px in items.component.scss
- Fixes issue where cloud upload icon was cut off vertically

--- a/src/app/pages/boxes/boxes.component.scss
+++ b/src/app/pages/boxes/boxes.component.scss
@@ -75,7 +75,7 @@ $spacing-xl: 32px;
     cursor: pointer;
     position: relative;
     transition: all 0.3s ease;
-    min-height: 140px;
+    min-height: 200px;
     text-align: center;
 
     &:hover {
